@@ -1,3 +1,3 @@
-EBUILD cds-meta-11.0-r1.ebuild 1508 RMD160 16a4f6f8fc7dc7766e0db08194431a9ff6444103 SHA1 7455a4411f0e12704bf1c00fc9f00d81be50d51b SHA256 54aa62ad6e4f635df32409dff658f68013e0c19aa2c5c4fbd9be4479da621567
-MISC ChangeLog 1424 RMD160 a77c10c778165338860429445f5b6f52f1e4b2f9 SHA1 698ffe399da938379c14fb066529120092cbaf29 SHA256 885960e1dbc2c4bc1e208131f3a2e21a5b5984e6b066f9d0d12b3221ef34a478
+EBUILD cds-meta-11.0-r2.ebuild 1573 RMD160 6907cb4b43708ef28bf0be74a0e4cac4d6c53dd9 SHA1 0d366fb4fe4ea0d324e1ee02a2dc9b08a46a6e0b SHA256 88e89304f59ca072b6521fce1402591765ba7f8f53bd27f38188168e931e063f
+MISC ChangeLog 1611 RMD160 52f269e27561c68ecbf0082f40a536565108237e SHA1 28df9bacf6ced4d6955df34a12a235e86e5932cc SHA256 0035b5171c0b739e4a5e9f150329fdc0a77a3bf01870f3dbddb43714a694d42f
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
