@@ -5,6 +5,7 @@
 # This file contains descriptions of CALCULATE USE_EXPAND flags.
 
 # Keep it sorted.
+noapache - exclude apache packages
 nocompiz - exclude compiz packages
 nodecoration - exclude decoration packages
 nodhcp - exclude dhcp packages
