@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cds-meta
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cds-meta-11.0-r2 (21 Feb 2011)
+
+  21 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cds-meta-11.0-r1.ebuild, +cds-meta-11.0-r2.ebuild:
+  Add calculate_noapache USE flag
 
   13 Dec 2010; Aleksey Samoukin <as@calculate.ru>
   cds-meta-11.0.ebuild:
